package client

import (
	"context"
	"fmt"
	"log"
	"time"

	cartv1 "zjMall/gen/go/api/proto/cart"

	"zjMall/internal/common/middleware"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/grpc/keepalive"
	"google.golang.org/grpc/metadata"
)

// CartClient è´­ç‰©è½¦æœåŠ¡å®¢æˆ·ç«¯æ¥å£
type CartClient interface {
	// RemoveItems æ‰¹é‡åˆ é™¤è´­ç‰©è½¦å•†å“
	RemoveItems(ctx context.Context, itemIDs []string) error
	// Close å…³é—­è¿æ¥
	Close() error
}

type cartClient struct {
	conn   *grpc.ClientConn
	client cartv1.CartServiceClient
}

// NewCartClient åˆ›å»ºè´­ç‰©è½¦æœåŠ¡å®¢æˆ·ç«¯
// addr: è´­ç‰©è½¦æœåŠ¡ gRPC åœ°å€ï¼Œä¾‹å¦‚ "localhost:50054"
func NewCartClient(addr string) (CartClient, error) {
	opts := []grpc.DialOption{
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithKeepaliveParams(keepalive.ClientParameters{
			Time:                30 * time.Second, // æ¯30ç§’å‘é€ä¸€æ¬¡pingï¼ˆé™ä½é¢‘ç‡ï¼‰
			Timeout:             5 * time.Second,  // pingè¶…æ—¶æ—¶é—´
			PermitWithoutStream: false,            // åªåœ¨æœ‰æ´»è·ƒæµæ—¶å‘é€ping
		}),
	}

	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	conn, err := grpc.DialContext(ctx, addr, opts...)
	if err != nil {
		return nil, fmt.Errorf("è¿æ¥è´­ç‰©è½¦æœåŠ¡å¤±è´¥: %w", err)
	}

	client := cartv1.NewCartServiceClient(conn)

	log.Printf("âœ… è´­ç‰©è½¦æœåŠ¡å®¢æˆ·ç«¯è¿æ¥æˆåŠŸ: %s", addr)

	return &cartClient{
		conn:   conn,
		client: client,
	}, nil
}

// RemoveItems æ‰¹é‡åˆ é™¤è´­ç‰©è½¦å•†å“
func (c *cartClient) RemoveItems(ctx context.Context, itemIDs []string) error {
	if len(itemIDs) == 0 {
		return nil // ç©ºåˆ—è¡¨ç›´æ¥è¿”å›æˆåŠŸ
	}

	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	// ä» context ä¸­è·å– userIDï¼ˆç”±è®¢å•æœåŠ¡çš„è®¤è¯ä¸­é—´ä»¶è®¾ç½®ï¼‰
	userID := middleware.GetUserIDFromContext(ctx)
	if userID == "" {
		return fmt.Errorf("æ— æ³•è·å–ç”¨æˆ·IDï¼Œè¯·ç¡®ä¿å·²ç™»å½•")
	}

	// å°† userID æ”¾å…¥ gRPC metadataï¼Œä¼ é€’ç»™è´­ç‰©è½¦æœåŠ¡
	md := metadata.New(map[string]string{
		string(middleware.UserIDKey): userID,
	})
	ctx = metadata.NewOutgoingContext(ctx, md)

	log.Printf("ğŸ” [CartClient] RemoveItems: userID=%s, itemIDs=%v", userID, itemIDs)

	resp, err := c.client.RemoveItems(ctx, &cartv1.RemoveItemsRequest{
		ItemIds: itemIDs,
	})
	if err != nil {
		return fmt.Errorf("è°ƒç”¨è´­ç‰©è½¦æœåŠ¡å¤±è´¥: %w", err)
	}
	if resp.Code != 0 {
		return fmt.Errorf("è´­ç‰©è½¦æœåŠ¡è¿”å›é”™è¯¯: code=%d, message=%s", resp.Code, resp.Message)
	}

	log.Printf("âœ… [CartClient] RemoveItems: æˆåŠŸåˆ é™¤ %d ä¸ªè´­ç‰©è½¦é¡¹", len(itemIDs))
	return nil
}

// Close å…³é—­è¿æ¥
func (c *cartClient) Close() error {
	if c.conn != nil {
		return c.conn.Close()
	}
	return nil
}
